--- a/src/main/resources/fxml/IndicadoresView.fxml
+++ b/src/main/resources/fxml/IndicadoresView.fxml
@@ -8,17 +8,16 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" style="-fx-background-color: #2c2c2c;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.upe.controller.IndicadoresViewController">
       <AnchorPane layoutY="-2.0" prefHeight="700.0" prefWidth="317.0">
             <Button fx:id="BCadastrarIN" alignment="CENTER" contentDisplay="CENTER" layoutX="66.0" layoutY="194.0" mnemonicParsing="false" onAction="#cadastrarNovoIndicador" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1E1E1E;" text="Cadastrar novo indicador" textFill="#e5a000">
                <font>
-                  <Font name="System Bold" size="15.0" />
+                  <Font size="15.0" />
                </font>
             </Button>
             <Button fx:id="BListarIN" alignment="CENTER" contentDisplay="CENTER" layoutX="66.0" layoutY="267.0" mnemonicParsing="false" onAction="#listarMeusIndicadores" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1E1E1E;" text="Ver meus indicadores" textFill="#e5a000">
                <font>
-                  <Font name="System Bold" size="15.0" />
+                  <Font size="15.0" />
                </font>
             </Button>
             <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
@@ -38,7 +37,7 @@
                   <Image url="@../images/coracao.png" />
             </ImageView>
       </AnchorPane>
-      <AnchorPane layoutX="779.0" layoutY="-22.0" prefHeight="140.0" prefWidth="130.0">
+      <AnchorPane layoutX="786.0" layoutY="-21.0" prefHeight="140.0" prefWidth="130.0">
             <ImageView fx:id="IFechar" fitHeight="80.0" fitWidth="100.0" layoutX="25.0" layoutY="30.0" onMouseClicked="#voltar" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="30.0">
                   <Image url="@../images/sair.png" />
             </ImageView>
