--- a/src/main/resources/fxml/MenuPlanoTreinos.fxml
+++ b/src/main/resources/fxml/MenuPlanoTreinos.fxml
@@ -2,128 +2,132 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" style="-fx-background-color: #2C2C2C;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.upe.controller.MenuPlanoTreinosController">
    <children>
-      <StackPane prefHeight="700.0" prefWidth="900.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-      <VBox alignment="CENTER" prefHeight="700.0" prefWidth="900.0">
+      <AnchorPane layoutX="772.0" layoutY="-17.0" prefHeight="138.0" prefWidth="150.0">
          <children>
-            <HBox alignment="CENTER" prefHeight="186.0" prefWidth="900.0">
-               <children>
-                  <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../images/dumbbells%201.png" />
-                     </image>
-                     <HBox.margin>
-                        <Insets left="10.0" right="200.0" />
-                     </HBox.margin>
-                  </ImageView>
-                  <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../images/Design%20sem%20nome%20(4)%202.png" />
-                     </image>
-                     <HBox.margin>
-                        <Insets right="200.0" />
-                     </HBox.margin>
-                  </ImageView>
-                  <AnchorPane prefHeight="138.0" prefWidth="150.0">
-                     <children>
-                        <ImageView fitHeight="150.0" fitWidth="165.0" layoutY="18.0" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="18.0">
-                           <image>
-                              <Image url="@../images/Design%20sem%20nome%20(6)%201.png" />
-                           </image>
-                        </ImageView>
-                        <Button fx:id="sairB" layoutX="3.0" layoutY="22.0" mnemonicParsing="false" onAction="#handleSair" prefHeight="142.0" prefWidth="143.0" style="-fx-background-color: transparent;" text="" />
-                     </children>
-                  </AnchorPane>
-               </children>
-            </HBox>
-            <Button fx:id="criarPlanoB" mnemonicParsing="false" prefHeight="40.0" prefWidth="500.0" style="-fx-background-color: #1E1E1E;" text="Criar Novo Plano de Treino" textFill="#e5a000">
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-               <VBox.margin>
-                  <Insets bottom="20.0" top="60.0" />
-               </VBox.margin>
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Button>
-            <Button fx:id="ListarPlanoB" mnemonicParsing="false" prefHeight="40.0" prefWidth="500.0" style="-fx-background-color: #1E1E1E;" text="Listar Meus Planos de Treino" textFill="#e5a000">
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-               <VBox.margin>
-                  <Insets bottom="20.0" />
-               </VBox.margin>
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Button>
-            <Button fx:id="editarPlanoB" mnemonicParsing="false" prefHeight="40.0" prefWidth="500.0" style="-fx-background-color: #1E1E1E;" text="Editar Plano de Treino" textFill="#e5a000">
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-               <VBox.margin>
-                  <Insets bottom="20.0" />
-               </VBox.margin>
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Button>
-            <Button fx:id="deletarPlanoB" mnemonicParsing="false" prefHeight="40.0" prefWidth="500.0" style="-fx-background-color: #1E1E1E;" text="Deletar Plano de Treino" textFill="#e5a000">
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-               <VBox.margin>
-                  <Insets bottom="20.0" />
-               </VBox.margin>
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Button>
-            <Button fx:id="adicionarExercicioAoPlanoB" mnemonicParsing="false" prefHeight="40.0" prefWidth="500.0" style="-fx-background-color: #1E1E1E;" text="Adicionar Exercício ao Plano" textFill="#e5a000">
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-               <VBox.margin>
-                  <Insets bottom="20.0" />
-               </VBox.margin>
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Button>
-            <Button fx:id="removerExercíciodoPlanoB" mnemonicParsing="false" prefHeight="40.0" prefWidth="500.0" style="-fx-background-color: #1E1E1E;" text="Remover Exercício do Plano" textFill="#e5a000">
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-               <VBox.margin>
-                  <Insets bottom="20.0" />
-               </VBox.margin>
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Button>
-            <Button fx:id="verDetalhesDePlanoB" mnemonicParsing="false" prefHeight="40.0" prefWidth="500.0" style="-fx-background-color: #1E1E1E;" text="Ver Detalhes do Plano" textFill="#e5a000">
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-               <VBox.margin>
-                  <Insets bottom="50.0" />
-               </VBox.margin>
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Button>
+            <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="35.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="29.0">
+               <image>
+                  <Image url="@../images/sair.png" />
+               </image>
+            </ImageView>
+            <Button fx:id="sairB" layoutX="37.0" layoutY="29.0" mnemonicParsing="false" onAction="#handleSair" prefHeight="80.0" prefWidth="100.0" style="-fx-background-color: transparent;" text="" />
          </children>
-      </VBox>
+      </AnchorPane>
+      <AnchorPane prefHeight="700.0" prefWidth="317.0">
+         <children>
+            <Button fx:id="criarPlanoB" layoutX="63.0" layoutY="249.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1E1E1E;" text="Criar Novo Plano de Treino" textFill="#e5a000">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Button>
+            <Button fx:id="ListarPlanoB" layoutX="63.0" layoutY="189.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1E1E1E;" text="Listar Meus Planos de Treino" textFill="#e5a000">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Button>
+            <Button fx:id="editarPlanoB" layoutX="63.0" layoutY="310.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1E1E1E;" text="Editar Plano de Treino" textFill="#e5a000">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Button>
+            <Button fx:id="deletarPlanoB" layoutX="63.0" layoutY="372.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1E1E1E;" text="Deletar Plano de Treino" textFill="#e5a000">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Button>
+            <Button fx:id="adicionarExercicioAoPlanoB" layoutX="63.0" layoutY="497.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1E1E1E;" text="Adicionar Exercício ao Plano" textFill="#e5a000">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Button>
+            <Button fx:id="removerExercíciodoPlanoB" layoutX="63.0" layoutY="559.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1E1E1E;" text="Remover Exercício do Plano" textFill="#e5a000">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Button>
+            <Button fx:id="verDetalhesDePlanoB" layoutX="63.0" layoutY="434.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1E1E1E;" text="Ver Detalhes do Plano" textFill="#e5a000">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Button>
+            <Separator layoutX="320.0" orientation="VERTICAL" prefHeight="700.0" prefWidth="0.0" />
+            <ImageView fitHeight="56.0" fitWidth="45.0" layoutX="12.0" layoutY="186.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/halter_pequeno.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="17.0" layoutY="21.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/halter_pequeno.png" />
+               </image>
+            </ImageView>
+            <Separator layoutY="113.0" prefHeight="3.0" prefWidth="320.0" />
+            <ImageView fitHeight="56.0" fitWidth="45.0" layoutX="12.0" layoutY="247.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/halter_pequeno.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="56.0" fitWidth="45.0" layoutX="12.0" layoutY="308.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/halter_pequeno.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="56.0" fitWidth="45.0" layoutX="12.0" layoutY="370.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/halter_pequeno.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="56.0" fitWidth="45.0" layoutX="12.0" layoutY="432.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/halter_pequeno.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="56.0" fitWidth="45.0" layoutX="12.0" layoutY="495.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/halter_pequeno.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="56.0" fitWidth="45.0" layoutX="12.0" layoutY="557.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/halter_pequeno.png" />
+               </image>
+            </ImageView>
+            <Text fill="#9c27b0" layoutX="97.0" layoutY="70.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Plano de Treinos">
+               <font>
+                  <Font name="System Bold" size="24.0" />
+               </font>
+            </Text>
+         </children>
+      </AnchorPane>
    </children>
    <opaqueInsets>
       <Insets bottom="80.0" top="80.0" />
