--- a/src/main/resources/fxml/MenuRelatorios.fxml
+++ b/src/main/resources/fxml/MenuRelatorios.fxml
@@ -10,19 +10,13 @@
 <?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" style="-fx-background-color: #2C2C2C;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.upe.controller.MenuRelatoriosController">
-   <children>
       <AnchorPane layoutX="775.0" layoutY="-17.0" prefHeight="138.0" prefWidth="150.0">
-         <children>
             <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="35.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="29.0">
-               <image>
                   <Image url="@../images/sair.png" />
-               </image>
             </ImageView>
-            <Button fx:id="sairB" layoutX="30.0" layoutY="29.0" mnemonicParsing="false" onAction="#handleSair" prefHeight="80.0" prefWidth="100.0" style="-fx-background-color: transparent;" text="" />
-         </children>
+            <Button fx:id="sairB" layoutX="30.0" layoutY="29.0" mnemonicParsing="false" onAction="#handleSair" prefHeight="80.0" prefWidth="100.0" style="-fx-background-color: transparent;"/>
       </AnchorPane>
       <AnchorPane prefHeight="700.0" prefWidth="317.0">
-         <children>
             <Button fx:id="exportarRelatorioB" layoutX="66.0" layoutY="191.0" minHeight="40.0" minWidth="240.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1E1E1E;" text="Exportar Relatório Por Data" textFill="#e5a000">
                <opaqueInsets>
                   <Insets />
@@ -40,9 +34,7 @@
                </font>
             </Button>
             <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
-               <image>
                   <Image url="@../images/salvar.png" />
-               </image>
             </ImageView>
             <Separator layoutX="320.0" orientation="VERTICAL" prefHeight="700.0" prefWidth="3.0" />
             <Separator layoutY="107.0" prefHeight="7.0" prefWidth="320.0" />
@@ -52,18 +44,12 @@
                </font>
             </Text>
             <ImageView fitHeight="56.0" fitWidth="45.0" layoutX="14.0" layoutY="189.0" pickOnBounds="true" preserveRatio="true">
-               <image>
                   <Image url="@../images/coracao.png" />
-               </image>
             </ImageView>
             <ImageView fitHeight="56.0" fitWidth="45.0" layoutX="14.0" layoutY="259.0" pickOnBounds="true" preserveRatio="true">
-               <image>
                   <Image url="@../images/coracao.png" />
-               </image>
             </ImageView>
-         </children>
       </AnchorPane>
-   </children>
    <opaqueInsets>
       <Insets bottom="80.0" top="80.0" />
    </opaqueInsets>
