--- a/src/main/resources/fxml/AdministradorView.fxml
+++ b/src/main/resources/fxml/AdministradorView.fxml
@@ -34,8 +34,8 @@
                      </font>
                   </Button>
                   <Separator layoutX="311.0" layoutY="1.0" orientation="VERTICAL" prefHeight="700.0" prefWidth="21.0" />
-                  <ImageView fitHeight="56.0" fitWidth="46.0" layoutX="14.0" layoutY="186.0" pickOnBounds="true" preserveRatio="true">
-                        <Image url="@../images/logo_registro.png" />
+                  <ImageView fitHeight="50.0" fitWidth="32.0" layoutX="22.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true">
+                        <Image url="@../images/ver.png" />
                   </ImageView>
                   <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="20.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true">
                         <Image url="@../images/logo_app.png" />
@@ -46,14 +46,14 @@
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Text>
-                  <ImageView fitHeight="56.0" fitWidth="46.0" layoutX="14.0" layoutY="253.0" pickOnBounds="true" preserveRatio="true">
-                        <Image url="@../images/logo_registro.png" />
+                  <ImageView fitHeight="50.0" fitWidth="32.0" layoutX="23.0" layoutY="260.0" pickOnBounds="true" preserveRatio="true">
+                        <Image url="@../images/promover.png" />
                   </ImageView>
-                  <ImageView fitHeight="56.0" fitWidth="46.0" layoutX="14.0" layoutY="320.0" pickOnBounds="true" preserveRatio="true">
-                        <Image url="@../images/logo_registro.png" />
+                  <ImageView fitHeight="56.0" fitWidth="37.0" layoutX="20.0" layoutY="325.0" pickOnBounds="true" preserveRatio="true">
+                        <Image url="@../images/rebaixar.png" />
                   </ImageView>
-                  <ImageView fitHeight="56.0" fitWidth="46.0" layoutX="14.0" layoutY="385.0" pickOnBounds="true" preserveRatio="true">
-                        <Image url="@../images/logo_registro.png" />
+                  <ImageView fitHeight="50.0" fitWidth="32.0" layoutX="22.0" layoutY="392.0" pickOnBounds="true" preserveRatio="true">
+                        <Image url="@../images/excluir.png" />
                   </ImageView>
             </AnchorPane>
             <AnchorPane layoutX="781.0" layoutY="-6.0" prefHeight="80.0" prefWidth="100.0">
