--- a/src/main/resources/fxml/MenuRelatorios.fxml
+++ b/src/main/resources/fxml/MenuRelatorios.fxml
@@ -14,7 +14,7 @@
             <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="35.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="29.0">
                   <Image url="@../images/sair.png" />
             </ImageView>
-            <Button fx:id="sairB" layoutX="30.0" layoutY="29.0" mnemonicParsing="false" onAction="#handleSair" prefHeight="80.0" prefWidth="100.0" style="-fx-background-color: transparent;"/>
+            <Button fx:id="sairB" layoutX="30.0" layoutY="29.0" mnemonicParsing="false" onAction="#handleSair" prefHeight="80.0" prefWidth="100.0" style="-fx-background-color: transparent;" />
       </AnchorPane>
       <AnchorPane prefHeight="700.0" prefWidth="317.0">
             <Button fx:id="exportarRelatorioB" layoutX="66.0" layoutY="191.0" minHeight="40.0" minWidth="240.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1E1E1E;" text="Exportar Relatório Por Data" textFill="#e5a000">
@@ -43,11 +43,11 @@
                   <Font name="System Bold" size="24.0" />
                </font>
             </Text>
-            <ImageView fitHeight="56.0" fitWidth="45.0" layoutX="14.0" layoutY="189.0" pickOnBounds="true" preserveRatio="true">
-                  <Image url="@../images/coracao.png" />
+            <ImageView fitHeight="45.0" fitWidth="32.0" layoutX="14.0" layoutY="195.0" pickOnBounds="true" preserveRatio="true">
+                  <Image url="@../images/calendario.png" />
             </ImageView>
-            <ImageView fitHeight="56.0" fitWidth="45.0" layoutX="14.0" layoutY="259.0" pickOnBounds="true" preserveRatio="true">
-                  <Image url="@../images/coracao.png" />
+            <ImageView fitHeight="56.0" fitWidth="32.0" layoutX="14.0" layoutY="265.0" pickOnBounds="true" preserveRatio="true">
+                  <Image url="@../images/calendario-diferenca.png" />
             </ImageView>
       </AnchorPane>
    <opaqueInsets>
