--- a/src/main/resources/fxml/visualizador.fxml
+++ b/src/main/resources/fxml/visualizador.fxml
@@ -5,28 +5,29 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="450.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.upe.controller.VisualizadorExercicioController">
+<BorderPane prefHeight="550.0" prefWidth="600.0" style="-fx-background-color: #2c2c2c;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.upe.controller.VisualizadorExercicioController">
 
     <center>
-        <AnchorPane prefHeight="300.0" prefWidth="400.0" BorderPane.alignment="CENTER">
+        <StackPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #2c2c2c;" BorderPane.alignment="CENTER">
             <children>
-                <ImageView fx:id="gifImageView" fitHeight="300.0" fitWidth="400.0" layoutX="-21.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
+                <ImageView fx:id="gifImageView" fitHeight="400.0" fitWidth="600.0" pickOnBounds="true" preserveRatio="true" />
             </children>
-        </AnchorPane>
+        </StackPane>
     </center>
 
     <bottom>
-        <AnchorPane prefHeight="150.0" prefWidth="400.0" BorderPane.alignment="CENTER">
+        <AnchorPane prefHeight="150.0" prefWidth="600.0" style="-fx-background-color: #2c2c2c;" BorderPane.alignment="CENTER">
             <children>
-                <Label layoutX="10.0" layoutY="10.0" text="Descrição do exercício:" textFill="#333">
+                <Label layoutX="10.0" layoutY="10.0" text="Descrição do exercício:" textFill="#ffb300">
                     <font>
-                        <Font size="14.0" />
+                        <Font name="System Bold" size="14.0" />
                     </font>
                 </Label>
 
-                <TextArea fx:id="descricaoArea" editable="false" layoutX="10.0" layoutY="35.0" prefHeight="100.0" prefWidth="380.0" wrapText="true" />
+                <TextArea fx:id="descricaoArea" editable="false" layoutX="10.0" layoutY="35.0" prefHeight="100.0" prefWidth="580.0" style="-fx-control-inner-background: #1e1e1e; -fx-text-fill: #ffb300; -fx-background-color: #1e1e1e; -fx-border-color: #9c27b0; -fx-border-width: 2px;" wrapText="true" />
             </children>
         </AnchorPane>
     </bottom>
